<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_arm_stay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_arm_stay" />
            
        <Button
            android:id="@+id/button_arm_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_arm_away" />
        
         <Button
            android:id="@+id/button_disarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_disarm" />

</LinearLayout>
